resolved button layout issue

--- a/clipboard-landing-page/style.css
+++ b/clipboard-landing-page/style.css
@@ -20,6 +20,10 @@ body{
     align-items: center;
 }
 
+.btn-div{
+    display: inline;
+}
+
 .logo{
     padding-top: 80px;
 }
